# fts

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_users_and_ownership.py
backend/app/: config.py  database.py  deps.py  main.py  security.py
backend/app/models/: __init__.py  project.py  task.py  time_entry.py  user.py
backend/app/routers/: ai.py  projects.py  tasks.py  users.py
backend/app/schemas/: ai.py  project.py  task.py  user.py
backend/app/services/: ai_service.py
backend/tests/: conftest.py  test_ai.py  test_projects.py  test_role_scoping.py  test_tasks.py  test_users_me.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: ai.ts  client.ts  projects.ts  tasks.ts  types.ts  users.ts
frontend/src/auth/: Callback.tsx  RequireAuth.tsx  oidcConfig.ts
frontend/src/components/: AIPanel.tsx  ProjectList.tsx  TaskForm.tsx  TasksTable.tsx  TimeReport.tsx
frontend/src/components/layout/: PageHeader.tsx  Shell.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/components/ui/: ConfirmDialog.tsx  EmptyState.tsx  Pill.tsx
frontend/src/hooks/: useAI.ts  useEntries.ts  useMe.ts  useToast.tsx  useUsers.ts
frontend/src/pages/: Dashboard.tsx  NewEntry.tsx  ProjectsList.tsx  Reports.tsx  TaskDetail.tsx  TaskNew.tsx  TasksList.tsx  UsersList.tsx
frontend/src/styles/: components.css  global.css  tokens.css
